# easy-window-switcher-rs

./: Cargo.toml  LICENSE  Makefile  README.md
src/: cli.rs  lib.rs  main.rs
src/external_tools/: mod.rs  utils.rs  wmctrl.rs  xdotool.rs  xrandr.rs
src/models/: focus_direction.rs  mod.rs  monitor.rs  monitor_grid.rs  window.rs  workspace.rs  workspace_grid.rs  workspace_position.rs
src/services/: mod.rs  window_focuser.rs
